POR/RefEdge/src/objects/Advanced_Routing__c.object
<CustomObject>
    <description>Maps each of the values in Custom Settings &gt; Advanced Routing &gt; “Picklist Field to Route By” to the Appropriate Attributes.</description>
    <fields>
        <fullName>Adv_Routing_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This allows the RM to select the Attribute (and all the associated children) that should be routed.</description>
        <label>Attribute</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Level__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Advanced Routing</relationshipLabel>
        <relationshipName>Advanced_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Client_Value__c</fullName>
        <label>Client Routing Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Name__c</fullName>
        <description>This provides a way for an RM to provide a meaningful name to the routing record.</description>
        <label>Routing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Territory__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Territory_Id__c, Territory_Name__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Id__c</fullName>
        <label>Territory Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advanced Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Adv_Routing_Attribute__c</columns>
        <columns>Adv_Routing_Client_Value__c</columns>
        <columns>Adv_Routing_Name__c</columns>
        <columns>Adv_Routing_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Advanced Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Routing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>